[package]
name = "ply-engine"
version = "1.0.1"
edition = "2021"
description = "The most powerful app engine made entirely in Rust"
keywords = ["engine", "ui", "layout", "gamedev", "graphics"]
categories = ["gui", "game-engines", "graphics", "rendering"]
repository = "https://github.com/TheRedDeveloper/ply-engine"
homepage = "https://plyx.iz.rs"
documentation = "https://plyx.iz.rs/docs/getting-started/"
readme = "README.md"
license = "0BSD"
exclude = ["scripts/*", ".vscode/*", ".github/*", ".cargo/*", "deps/*", "testcrate/*"]

[features]
default = ["a11y"]
text-styling = []
tinyvg = ["dep:tinyvg", "dep:kurbo", "dep:lyon"]
shader-build = ["dep:spirv-cross2"]
built-in-shaders = []
a11y = ["dep:accesskit", "dep:accesskit_unix", "dep:accesskit_macos", "dep:accesskit_windows", "dep:accesskit_android"]
net = ["dep:ureq", "dep:tokio", "dep:tokio-tungstenite", "dep:rustls", "dep:futures", "dep:sapp-jsutils"]
net-json = ["net", "dep:serde", "dep:serde_json"]
audio = ["macroquad/audio"]

[dependencies]
macroquad = { version = "0.4.14", package = "macroquad-ply" }
tinyvg = { version = "0.2", default-features = false, optional = true }
kurbo = { version = "0.13.0", optional = true }
lyon = { version = "1.0", optional = true }
spirv-cross2 = { version = "0.6", optional = true, default-features = false, features = ["glsl"] }
rustc-hash = "2"

# JSON deserialization (optional, behind "net-json" feature)
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
accesskit = { version = "0.24", optional = true }
# Net (native only)
ureq = { version = "3", optional = true, default-features = false, features = ["rustls"] }
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread", "time", "net", "sync", "macros"] }
tokio-tungstenite = { version = "0.28", optional = true, default-features = false, features = ["rustls-tls-webpki-roots", "handshake", "connect"] }
rustls = { version = "0.23", optional = true, default-features = false }
futures = { version = "0.3", optional = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = { version = "0.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
accesskit_unix = { version = "0.20", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { version = "0.25", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { version = "0.32", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
accesskit_android = { version = "0.7", optional = true, features = ["embedded-dex"] }
